[tool.poetry]
name = "delete-telegram-chat-history"
version = "0.1.0"
description = ""
authors = ["lucca <luccalin@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "delete_telegram_chat_history"}]

[tool.poetry.dependencies]
python = "^3.10"
telethon = "^1.25.4"
schedule = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
